lib/bait/tests/inout_error/struct/field_is_immutable.in.bt
import bait.tests.packages.struct_mod

struct Spam{
	a i32
pub:
	b i32
}

mut f := struct_mod.Foo{}
f.c = 5
f.d = 10

mut s := Spam{}
s.a = 1
s.b = 2
